# MPC-MPG-PacMan

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  init_cmake.bat  readme.md
assets/maps/: 1.map  layout.map
assets/textures/: source.txt
cmake/: Helpers.cmake
enc_temp_folder/1cd55c3e61d4f553f3ec2c491c1eec4/: Ghost.cpp
enc_temp_folder/4c6bae7f7f2d377351d0ea53b5adcc29/: RenderHelper.cpp
enc_temp_folder/78b7b8c9fd5621136c53bad30eb56a8/: GameMenu.cpp
enc_temp_folder/cf78dbf45666efebb97c5c3d88d4542a/: TileWall.cpp
enc_temp_folder/e7bed79381e3f80eacad4bdecbb38f7/: RenderHelper.h
include/: BoundingBox3D.h  CameraStruct.h  DirChangeRequest.h  Entity.h  FadeTimer.h  Game.h  GameCamera.h  GameControl.h  GameLighting.h  GameLogic.h  GameMenu.h  GameSounds.h  GameUserInput.h  Ghost.h  LightingHelper.h  Macro.h  Map.h  MapFactory.h  MenuItem.h  MovableEntity.h  MoveDir.h  Pi.h  Player.h  Point3D.h  RenderHelper.h  SpeedoMeter.h  Tile.h  TileWall.h  WorldSphere.h  gl_includes.h
lib/glft2/: CMakeLists.txt
lib/glft2/include/glft2/: TextRenderer.hpp
lib/glft2/src/: TextRenderer.cpp
lib/glft2/test/: main.cpp
resources/: resource.h  resource.rc
src/: BoundingBox3D.cpp  DirChangeRequest.cpp  Entity.cpp  FadeTimer.cpp  Game.cpp  GameCamera.cpp  GameControl.cpp  GameLighting.cpp  GameLogic.cpp  GameMenu.cpp  GameSounds.cpp  GameUserInput.cpp  Ghost.cpp  LightingHelper.cpp  Map.cpp  MapFactory.cpp  MenuItem.cpp  MovableEntity.cpp  Player.cpp  Point3D.cpp  RenderHelper.cpp  Tile.cpp  TileWall.cpp  WorldSphere.cpp  main.cpp
texture_enhance/: enhance_ocv.py  source.txt
